# teaorcoffee

./: .dockerignore  .gitignore  Dockerfile  app.py  apps_script.js  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml
api/: index.py
pages/: 1_Order.py  2_Admin.py
src/teaorcoffee/: main.py
src/teaorcoffee/core/: auth.py  config.py  database.py  init_db.py  state.py
src/teaorcoffee/models/: schema.py
src/teaorcoffee/routes/: admin.py  auth.py  chat.py  health.py  votes.py  websocket.py
src/teaorcoffee/utils/: broadcast.py  chat.py
streamlit_utils/: api.py  chat_client.py  styles.py
