[project]
name = "teaorcoffee"
version = "0.1.0"
description = ""
authors = [
    {name = "vaibhavsinghtaurus",email = "vaibhav.singh@thinktaurus.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.6,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "motor (>=3.3.0,<4.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "dnspython (>=2.8.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "teaorcoffee", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
